--- a/admin/templ/compose.html
+++ b/admin/templ/compose.html
@@ -1,4 +1,4 @@
-<section class="vbox" ng-controller="messagectrl">
+<section class="vbox" ng-controller="inboxctrl">
     <section>
         <div class="wrapper b-b b-light">
             <a href="#" data-toggle="class" class="pull-left m-r-sm"><i class="fa fa-star-o fa-1x text"></i><i class="fa fa-star text-warning fa-1x text-active"></i></a>
