--- a/admin/templ/notedetail.html
+++ b/admin/templ/notedetail.html
@@ -1,9 +1,9 @@
 
-<section class="vbox">
+<section class="vbox" ng-controller="inboxctrl">
     <section>
         <div class="wrapper b-b b-light">
             <a href="#" data-toggle="class" class="pull-left m-r-sm"><i class="fa fa-star-o fa-1x text"></i><i class="fa fa-star text-warning fa-1x text-active"></i></a>
-            <a href="#email-content, #email-list" data-toggle="class:show,hide" class="pull-right text">
+            <a href="#email-content, #email-list" ng-click="backToInbox()" data-toggle="class:show,hide" class="pull-right text">
                 <i class="fa fa-trash-o"></i>
             </a>
             <h4 class="m-n"> {{selnote.subject}}</h4>
@@ -13,7 +13,7 @@
                 <a href="#" class="thumb-xs inline"><img ng-src="{{topurl}}{{selnote.senderAvatar}}" class="img-circle"></a>
                   <span class="inline m-t-xs">{{selnote.senderName}}
                    {{selnote.toGroup}}</span>
-                <div class="pull-right inline">May 12 (<em>4 days ago</em>)
+                <div class="pull-right inline">{{selnote.createdTime}} (<em>4 days ago</em>)
                     <div class="btn-group">
                         <button class="btn btn-default btn-xs" data-toggle="tooltip" data-title="Reply"><i class="fa fa-reply"></i></button>
                         <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
