--- a/admin/templ/steplisthor.html
+++ b/admin/templ/steplisthor.html
@@ -148,7 +148,7 @@
                                     <span>Filter</span>
                                 </a>
                                 <ul class="nav lt" style="display: block">
-                                    <li ng-repeat="fd in fieldList">
+                                    <li ng-repeat="fd in filterList">
                                         <section class="panel panel-default">
                                             <div class="panel-body" ng-include="fd.template"></div>
                                         </section>
