--- a/admin/templ/tenantDetail.html
+++ b/admin/templ/tenantDetail.html
@@ -92,11 +92,11 @@
                     <div class="list-group">
                         <a href="#" class="list-group-item text-ellipsis">
                             <span class="badge bg-danger">7:30</span>
-                            Meet a friend
+                            Launch new offers
                         </a>
                         <a href="#" class="list-group-item text-ellipsis">
                             <span class="badge bg-success">9:30</span>
-                            Have a kick off meeting with .inc company
+                            Have a kick off meeting with DirecTV
                         </a>
                         <a href="#" class="list-group-item text-ellipsis">
                             <span class="badge bg-light">19:30</span>
