--- a/admin/templ/ctrls/dropdown.html
+++ b/admin/templ/ctrls/dropdown.html
@@ -1,4 +1,4 @@
 <div class="form-group">
     <label>{{fd.label}}</label>
-    <select class="form-control" ng-model="fd.fldvalue" ng-options="o.optvalue as o.label for o in fd.options" placeholder="{{fd.label}}"></select>
+    <select class="form-control" ng-model="fd.fldvalue" ng-change="onfldChange(fd)" ng-options="o.optvalue as o.label for o in fd.options" placeholder="{{fd.label}}"></select>
 </div>
