--- a/admin/templ/inbox.html
+++ b/admin/templ/inbox.html
@@ -1,7 +1,7 @@
 
 <!-- /.aside -->
 <!-- .aside -->
-<aside class="bg-light lter b-l"  ng-controller="messagectrl" id="email-list">
+<aside class="bg-light lter b-l"  ng-controller="inboxctrl" id="email-list">
 <section class="panel panel-default">
     <div class="row m-l-none m-r-none">
         <div class="col-lg-6">
@@ -15,216 +15,28 @@
 <section class="vbox">
 <section>
 <ul class="list-group no-radius m-b-none m-t-n-xxs list-group-alt list-group-lg">
-<li class="list-group-item">
+<li class="list-group-item animated fadeInRightBig" ng-repeat="m in newNotes" href="#email-content, #email-list" data-toggle="class:show,hide">
     <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
+        <img ng-src="{{rootUrl}}{{senderAvatar}}" class="img-circle">
     </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">3 minuts ago</small>
-        <strong>Drew Wllon</strong> <span class="label label-sm bg-primary text-uc">work</span>
-        <span>Wellcome and play this web application template ... </span>
+    <a href="#" class="clear" ng-click="openNote(m)">
+        <small class="pull-right text-muted">{{m.createdTime}}</small>
+        <strong>{{m.senderName}}</strong>
+        <span>{{m.shortened}}<span class="text-danger">Read me</span></span>
     </a>
 </li>
-<li class="list-group-item animated fadeInRightBig" href="#email-content, #email-list" data-toggle="class:show,hide">
+<li class="list-group-item" ng-repeat="m in readNotes">
     <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
+        <img ng-src="{{rootUrl}}{{senderAvatar}}" class="img-circle">
     </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">1 hour ago</small>
-        <strong>Jonathan George</strong>
-        <span>Morbi nec nunc condimentum...<span class="text-danger">click me</span></span>
+    <a href="#" ng-click="openNote(m)" class="clear">
+        <small class="pull-right text-muted">{{m.createdTime}}</small>
+        <strong>{{m.senderName}}</strong> <span class="label label-sm bg-primary text-uc"></span>
+        <span>{{m.shortened}}</span>
     </a>
 </li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">2 hours ago</small>
-        <strong>Josh Long</strong>
-        <span>Vestibulum ullamcorper sodales nisi nec...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">1 day ago</small>
-        <strong>Jack Dorsty</strong>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">3 days ago</small>
-        <strong>Morgen Kntooh</strong>
-        <span>Mobile first web app for startup...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">Jun 21</small>
-        <strong>Yoha Omish</strong> <span class="label label-sm bg-danger text-uc">private</span>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">May 10</small>
-        <strong>Gole Lido</strong>
-        <span>Vestibulum ullamcorper sodales nisi nec...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">Jan 2</small>
-        <strong>Jonthan Snow</strong> <span class="label label-sm bg-success text-uc">clients</span>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item" href="#email-content" data-toggle="class:show">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">3 minuts ago</small>
-        <strong>Drew Wllon</strong> <span class="label label-sm bg-primary text-uc">work</span>
-        <span>Vestibulum ullamcorper sodales nisi nec sodales nisi nec sodales nisi nec...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">1 hour ago</small>
-        <strong>Jonathan George</strong>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">2 hours ago</small>
-        <strong>Josh Long</strong>
-        <span>Vestibulum ullamcorper sodales nisi nec...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">1 day ago</small>
-        <strong>Jack Dorsty</strong>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">3 days ago</small>
-        <strong>Morgen Kntooh</strong>
-        <span>Mobile first web app for startup...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">Jun 21</small>
-        <strong>Yoha Omish</strong> <span class="label label-sm bg-danger text-uc">private</span>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">May 10</small>
-        <strong>Gole Lido</strong>
-        <span>Vestibulum ullamcorper sodales nisi nec...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">Jan 2</small>
-        <strong>Jonthan Snow</strong> <span class="label label-sm bg-success text-uc">clients</span>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item" href="#email-content" data-toggle="class:show">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">3 minuts ago</small>
-        <strong>Drew Wllon</strong> <span class="label label-sm bg-primary text-uc">work</span>
-        <span>Vestibulum ullamcorper sodales nisi nec sodales nisi nec sodales nisi nec...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">1 hour ago</small>
-        <strong>Jonathan George</strong>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">2 hours ago</small>
-        <strong>Josh Long</strong>
-        <span>Vestibulum ullamcorper sodales nisi nec...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar_default.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">1 day ago</small>
-        <strong>Jack Dorsty</strong>
-        <span>Morbi nec nunc condimentum...</span>
-    </a>
-</li>
-<li class="list-group-item">
-    <a href="#" class="thumb-xs pull-left m-r-sm">
-        <img src="images/avatar.jpg" class="img-circle">
-    </a>
-    <a href="#" class="clear">
-        <small class="pull-right text-muted">3 days ago</small>
-        <strong>Morgen Kntooh</strong>
-        <span>Mobile first web app for startup...</span>
-    </a>
-</li>
+
+
 </ul>
 </section>
 <!--<footer class="footer b-t bg-white-only">-->
