--- a/admin/templ/newnotes.html
+++ b/admin/templ/newnotes.html
@@ -3,7 +3,7 @@
         <strong>You have <span class="count">{{newtotal}}</span> notifications</strong>
     </header>
     <div class="list-group list-group-alt animated fadeInRight">
-        <a href="#" class="media list-group-item" ng-repeat="note in newnotes">
+        <a href="#" class="media list-group-item" ng-click="openNote(note)" ng-repeat="note in newnotes">
                   <span class="pull-left thumb-sm">
                     <img ng-src="{{note.senderAvatar}}" alt="{{note.senderName}}" class="img-circle">
                   </span>
