--- a/portal.html
+++ b/portal.html
@@ -63,6 +63,9 @@
                 <li><a href="#/admin" ng-click="createUser()">User</a></li>
                 <li><a href="#/admin" ng-click="createNote()">Message</a></li>
                 <li><a href="#/admin" ng-click="createAction()">Action</a></li>
+                <li><a href="#/admin" ng-click="createObject()">Object</a></li>
+                <li><a href="#/admin" ng-click="createIcon()">Icon</a></li>
+                <li><a href="#/admin" ng-click="createStyle()">Style</a></li>
             </ul>
             <!--<section class="dropdown-menu aside-xl on animated fadeInLeft no-borders lt">-->
                 <!--<div class="wrapper lter m-t-n-xs">-->
@@ -136,6 +139,10 @@
                 <li><a href="#/admin" ng-click="loadMessageLst()">Messages</a></li>
                 <li><a href="#/admin" ng-click="loadDrafts()">Drafts</a></li>
                 <li><a href="#/admin" ng-click="loadReportLst()">Reports</a></li>
+                <li><a href="#/admin" ng-click="loadActionLst()">Actions</a></li>
+                <li><a href="#/admin" ng-click="loadObjectLst()">Objects</a></li>
+                <li><a href="#/admin" ng-click="loadIconsLst()">Icon</a></li>
+                <li><a href="#/admin" ng-click="loadStyleLst()">Styles</a></li>
             </ul>
         </li>
         <li class="dropdown" ng-show="adminSession">
@@ -165,6 +172,9 @@
                 <li><a href="#/admin" ng-click="loadNoteFields()">Messages</a></li>
                 <li><a href="#/admin" ng-click="loadActionFields()">Actions</a></li>
                 <li><a href="#/admin" ng-click="loadReportFields()">Reports</a></li>
+                <li><a href="#/admin" ng-click="loadObjectFields()">Objects</a></li>
+                <li><a href="#/admin" ng-click="loadIconFields()">Icons</a></li>
+                <li><a href="#/admin" ng-click="loadStyleFields()">Styles</a></li>
             </ul>
         </li>
         <!--<li><a href="#">-->
@@ -551,7 +561,9 @@
 <script src="ctrl/blockctrl.js" type="text/javascript"></script>
 <script src="ctrl/reportctrl.js" type="text/javascript"></script>
 <script src="ctrl/fieldctrl.js" type="text/javascript"></script>
+<script src="ctrl/gridctrl.js" type="text/javascript"></script>
 <script src="ctrl/appctrl.js" type="text/javascript"></script>
+<script src="ctrl/actionctrl.js" type="text/javascript"></script>
 <script src="ctrl/rulectrl.js" type="text/javascript"></script>
 <script src="dir/gridDir.js" type="text/javascript"></script>
 <script src="dir/mknotify.js" type="text/javascript"></script>
